objects/Retainer__c.object
<CustomObject>
    <description>Project related retainer amount.  Used in PV Direct type projects.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Retainer amount.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT( Invoice__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice that includes this retainer.</description>
        <label>Invoice</label>
        <referenceTo>Invoices__c</referenceTo>
        <relationshipLabel>Retainers</relationshipLabel>
        <relationshipName>Retainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project that this retainer is for.</description>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Retainers</relationshipLabel>
        <relationshipName>Retainers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>PV Direct project stage.</description>
        <label>Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Retainer</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Retainer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Retainer_If_Fixed_Cost</fullName>
        <active>true</active>
        <description>Retainer records are not allowed to be saved for Fixed Cost projects.</description>
        <errorConditionFormula>Project__r.Fixed_Cost_Feasibility__c</errorConditionFormula>
        <errorMessage>Retainers are not allowed on Fixed Cost projects.</errorMessage>
    </validationRules>
</CustomObject>